[tool.poetry]
name = "ibevent"
version = "0.1.0"
description = "shawn deng repo temple project"
authors = ["shawndeng <shawndeng1109@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ib-async = "^1.0.3"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
nox = "^2024.10.9"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
commitizen = "^4.1.0"


[tool.poetry.scripts]
ibevent = "ibevent.cli:cli"


[tool.ruff]
line-length = 120
include = ["pyproject.toml", "ibevent/**/*.py"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D"  # pydocstyle
]

ignore = [
    "W191",  # indentation contains tabs
    "W291",
    "D401"  # imperative mood

]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
